gccida/g2/reload
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1163:6: error: use of undeclared identifier 'v29'
rtx *v29; // rbp 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1164:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1164:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1165:4: error: expected ';' after expression
rtx v31; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1165:5: error: use of undeclared identifier 'v31'; did you mean 'v11'?
rtx v31; // r13 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1145:20: note: 'v11' declared here
HARD_REG_ELT_TYPE *v11; // rax 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1169:6: error: use of undeclared identifier 'v35'
rtx *v35; // r14 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1172:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1172:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1178:4: error: expected ';' after expression
rtx v44; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1178:5: error: use of undeclared identifier 'v44'
rtx v44; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1187:4: error: expected ';' after expression
rtx n; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1187:5: error: use of undeclared identifier 'n'
rtx n; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1193:4: error: expected ';' after expression
rtx v59; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1193:5: error: use of undeclared identifier 'v59'
rtx v59; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1206:4: error: expected ';' after expression
rtx v72; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1206:5: error: use of undeclared identifier 'v72'
rtx v72; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1283:6: error: use of undeclared identifier 'v149'
rtx *v149; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1295:4: error: expected ';' after expression
rtx v161; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/reload1.c:1295:5: error: use of undeclared identifier 'v161'
rtx v161; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload/src/obj/reload1.o] Error 1
